# Deep_Learning_Trading_Strategy_for_Russian_Stock_Market

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  alpha_search.ipynb  baseline.ipynb  baseline_results_tuned.csv  benchmarks.ipynb  cdt_1d_cnn_notebook.ipynb  cdt_1d_cnn_wang.py  cdt_macro.ipynb  cnn_visualization.ipynb  dataset_formation.ipynb  models.ipynb  models_v4_1.ipynb  pyproject.toml  requirements.txt  visualization.ipynb  visualization_ver_2.ipynb
.github/workflows/: ci.yml
data/: MOEX_1day.parquet  SBER_1day.parquet
notebooks/: 01_dataset_formation.ipynb  02_baseline.ipynb  03_models_cnn.ipynb  04_mlp.ipynb  05_cdt_macro.ipynb  06_visualization.ipynb  07_visualization_v2.ipynb  08_alpha_search.ipynb
src/fqw/: __init__.py  config.py
src/fqw/backtest/: __init__.py  metrics.py  mlp.py  risk.py
src/fqw/data/: __init__.py  api.py  cleaning.py  loading.py  resampling.py
src/fqw/datasets/: __init__.py  tensors.py  tensors_cdt.py  tensors_mlp.py
src/fqw/experiments/: __init__.py  baseline.py  batch_cnn.py  cdt_macro.py  mlp.py
src/fqw/features/: __init__.py  baseline.py  macro.py  technical.py  wavelet.py
src/fqw/labeling/: __init__.py  alpha_search.py  cdt.py  volatility.py
src/fqw/metrics/: __init__.py  classification.py
src/fqw/models/: __init__.py  cdt.py  cnn.py  mlp.py
src/fqw/training/: __init__.py  cdt_walk_forward.py  moving_window.py  walk_forward.py
src/fqw/viz/: __init__.py  results.py
tests/: test_metrics.py
