[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fqw"
version = "1.0.0"
description = "Deep learning trading strategies for the Russian stock market (master's thesis)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tensorflow>=2.15",
  "PyWavelets",
  "pyarrow",
  "python-dotenv",
  "matplotlib",
  "seaborn",
  "scipy",
  "python-dateutil",
]

[project.optional-dependencies]
baseline = ["lightgbm", "catboost", "optuna"]
data = ["tinkoff-investments", "fastparquet", "jupyter", "ipykernel"]
dev = ["ruff>=0.4", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
